@@ -1,5 +1,4 @@
 META.yml
-Makefile
 Makefile.old
 cover_db
 blib
